--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="row">
+  <div class="col s2"></div>
+  <div class="col s8"><%= yield %></div>
+  <div class="col s2"></div>
 
-<%= yield %>
-
+</div>
 </body>
 </html>
