added admin boolean to Users for suture use. fixed User form to apply bcrypt. git commit rhymes.

--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -21,6 +21,11 @@
 </p>
 
 <p>
+  <strong>Duration:</strong>
+  <%= @flight.duration %>
+</p>
+
+<p>
   <strong>Airplane:</strong>
   <%= @flight.airplane_id %>
 </p>
