--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -28,6 +28,18 @@
     <%= f.text_field :departure %>
   </div>
   <div class="field">
+
+    <span>
+      <%= f.label :duration_minutes %><br>
+      <%= f.text_area :duration_minutes %>
+    </span>
+    <span>
+      <%= f.label :duration_hours %><br>
+      <%= f.text_area :duration_hours %>
+    </span>
+    <%# :duration = (:duration_minutes*60 + :duration_hours*360) %>
+  </div>
+  <div class="field">
     <%= f.label :airplane_id %><br>
     <%= f.number_field :airplane_id %>
   </div>
