--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -9,6 +9,7 @@
       <th>Date</th>
       <th>Destination</th>
       <th>Departure</th>
+      <th>Duration</th>
       <th>Airplane</th>
       <th colspan="3"></th>
     </tr>
@@ -21,6 +22,7 @@
         <td><%= flight.date %></td>
         <td><%= flight.destination %></td>
         <td><%= flight.departure %></td>
+        <td><%= flight.duration %></td>
         <td><%= flight.airplane_id %></td>
         <td><%= link_to 'Show', flight %></td>
         <td><%= link_to 'Edit', edit_flight_path(flight) %></td>
