--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,15 +13,19 @@
 
   <div class="field">
     <%= f.label :username %><br>
-    <%= f.text_field :username %>
+    <%= f.text_field :username, :required => true  %>
   </div>
   <div class="field">
     <%= f.label :email %><br>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, :required => true %>
   </div>
   <div class="field">
-    <%= f.label :password_digest %><br>
-    <%= f.text_area :password_digest %>
+    <%= f.label :password %><br>
+    <%= f.password_field :password, :required => true %>
+  </div>
+  <div class="field">
+    <%= f.label :password_confirmation %><br>
+    <%= f.password_field :password_confirmation, :required => true %>
   </div>
   <div class="actions">
     <%= f.submit %>
