--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :date %><br>
-    <%= f.date_select :date %>
+    <%= f.date_field :date %>
   </div>
   <div class="field">
     <%= f.label :destination %><br>
@@ -30,14 +30,13 @@
   <div class="field">
 
     <span>
-      <%= f.label :duration_minutes %><br>
-      <%= f.text_area :duration_minutes %>
+      <%= f.label :duration %><br>
+      <%= f.number_field :duration %>
     </span>
     <span>
-      <%= f.label :duration_hours %><br>
-      <%= f.text_area :duration_hours %>
+      <%#= f.label :duration_hours %><br>
+      <%#= f.number_field :duration_hours %>
     </span>
-    <%# :duration = (:duration_minutes*60 + :duration_hours*360) %>
   </div>
   <div class="field">
     <%= f.label :airplane_id %><br>
