--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+
+  <%= @current_user.to_json %>
+
+  
 <div class="row">
   <div class="col s2"></div>
   <div class="col s8"><%= yield %></div>
