--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,19 +4,49 @@
   <title>BurningAirlines</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <%= csrf_meta_tags %>
 </head>
+<body class="<%= params[:controller] %> <%= params[:action] %>">
 
-<body>
+  <nav>
+    <% unless @current_user.present?  %>
+    <%= link_to "Login", login_path, :class => "loginNav" %>
+    <%= link_to "Sign Up", new_user_path, :class => "signUpNav" %>
+    <% else %>
+    <a href="#" class="brand-logo center"><h4>Burning Airlines</h4></a>
+    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
+    <ul class="hide-on-med-and-down">
+    <%= link_to "Add Airplane", new_airplane_path, :class => "addPlaneNav" %>
+    <%= link_to "Add Flight", new_flight_path(), :class => "addFlightNav" %>
+    <%= link_to "Logout #{@current_user.email}", login_path, :method => :delete, :class => "logoutNav" %>
+    <%= link_to "Edit Profile", edit_user_path, :class => "editNav" %>
+    </ul>
+    <ul class="side-nav" id="mobile-demo">
+    <%= link_to "Add Airplane", new_airplane_path, :class => "addPlaneNav" %>
+    <%= link_to "Add Flight", new_flight_path(), :class => "addFlightNav" %>
+    <%= link_to "Edit Profile", edit_user_path, :class => "editNav" %>
+    <%= link_to "Logout #{@current_user.email}", login_path, :method => :delete, :class => "logoutNav" %>
+    </ul>
+
+    <% end %>
+
+  </nav>
+  <% if flash[:error] %>
+  <h5>
+    <%= flash[:error] %>
+  </h5>
+  <% end  %>
+
+<div class="container">
+<%= yield %>
+</div>
 
   <%= @current_user.to_json %>
 
-  
-<div class="row">
-  <div class="col s2"></div>
-  <div class="col s8"><%= yield %></div>
-  <div class="col s2"></div>
-</div>
-
 </body>
+
+
 </html>
