--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -24,19 +24,20 @@
   <strong>Duration:</strong>
   <%= @flight.duration %>
 </p>
-
-<p>
-  <strong>Airplane:</strong>
-  <%= @flight.airplane.name %>
-</p>
-<p>
-  <strong>cols:</strong>
-  <%= @flight.airplane.cols %>
-</p>
-<p>
-  <strong>rows:</strong>
-  <%= @flight.airplane.rows %>
-</p>
+<% if @flight.airplane %>
+  <p>
+    <strong>Airplane:</strong>
+    <%= @flight.airplane.name %>
+  </p>
+  <p>
+    <strong>cols:</strong>
+    <%= @flight.airplane.cols %>
+  </p>
+  <p>
+    <strong>rows:</strong>
+    <%= @flight.airplane.rows %>
+  </p>
+<% end %>
 
 
 <div class="planeDisplay">
