--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,10 +15,6 @@ body {
     );
 }
 
-.session {
-  background-color: #162129;
-}
-
 nav {
   background-image:
   linear-gradient(
@@ -37,6 +33,7 @@ nav {
   position: fixed;
   top: 0px;
 }
+
 a {
   font-size: 20px;
   margin: 0px 35px;
@@ -49,9 +46,11 @@ a {
 
 .loginNav, .addPlaneNav, .addFlightNav {
   float: left;
+  color: dodgerblue;
 }
 .signUpNav, .logoutNav, .editNav {
   float: right;
+  color: dodgerblue;
 }
 
 .side-nav {
@@ -73,4 +72,94 @@ a {
   a:hover {
     background-color: #141E25;
   }
+}
+
+// Form
+
+form {
+  width: 500px;
+  margin: 0 auto;
+  label {
+    color: white;
+  }
+  input {
+    border-bottom: 1px solid white;
+    margin: 0px 0px 10px 0px;
+  }
+  p {
+    color: white;
+  }
+  input:focus {
+  background-color: #f4a4a6;
+  }
+  button {
+    background-color: #D44D5C;
+    color: white;
+    border: 1px solid white;
+    border-radius: 5px;
+  }
+  button:hover {
+    background-color: #f4a4a6;
+  }
+  button:focus {
+    outline: 0;
+    border: 1px solid #D44D5C;
+  }
+  p input:focus {
+   border-bottom: 1px solid #162129 !important;
+   box-shadow: 0 1px 0 0 #162129 !important
+ }
+}
+
+.deleteButton {
+  color: white;
+  padding-top: 5px;
+  margin: 0px 5px 0px 0px;
+  font-size: 16px;
+}
+.deleteButtonRight {
+  float: right;
+}
+
+
+h1 {
+  margin-top: 100px;
+  text-align: center;
+}
+.logo h1 {
+  font-size: 100px;
+  color: white;
+  // text-shadow: 2px 1px 10px rgba(0, 0, 0, 0.5);
+}
+
+h2 {
+  font-family: 'Righteous', cursive;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 10px;
+  color: white;
+  // text-shadow: 2px 1px 10px rgba(0, 0, 0, 0.5);
+}
+
+h3 {
+  text-align: center;
+  font-size: 20px;
+  color: white;
+}
+
+h4 {
+  font-size: 40px;
+  margin-top: -8px;
+  transform: translate(-4px);
+  text-shadow:
+  -2px -2px 0 #D44D5C,
+  2px -2px 0 #D44D5C,
+  -2px 2px 0 #D44D5C,
+  2px 2px 0 #D44D5C;
+
+  // text-shadow: 2px 1px 10px rgba(0, 0, 0, 0.5);
+}
+
+h5 {
+  color: white;
 }
