--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@ body {
     );
 }
 
+
 nav {
   background-image:
   linear-gradient(
@@ -80,7 +81,7 @@ form {
   width: 500px;
   margin: 0 auto;
   label {
-    color: white;
+    color: black;
   }
   input {
     border-bottom: 1px solid white;
@@ -162,4 +163,15 @@ h4 {
 
 h5 {
   color: white;
+}
+
+
+// Seats
+
+.seat {
+  height: 20px;
+  width: 20px;
+  border: 2px solid black;
+  margin: 10px;
+  border-radius: 5px;
 }
