--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -40,20 +40,30 @@
 
 
 <div class="planeDisplay">
-  <% @flight.airplane.rows.to_i.times do |r| %>
+  <% (@flight.airplane.rows.to_i + 1).times do |r| %>
     <div class="row">
-      <% letters = ("A".."Z").to_a  %>
-      <% cols = @flight.airplane.cols.to_i %>
-      <% cols.times do |c| %>
-        <div class="col seat"><%= "#{r+1}" + letters[c] %></div>
-        <% if cols === 6 && c === 3 %>
-          <div class="col">aisle</div>
-        <% end %>
-        <% if cols === 8 && (c === 2 || c === 4) %>
-          <div class="col">aisle</div>
-        <% end %>
-        <% if cols === 10 && (c === 2 || c === 6) %>
-          <div class="col">aisle</div>
+      <% letters = ("A".."Z").to_a.unshift("")  %>
+      <% cols = @flight.airplane.cols.to_i + 1 %>
+      <% if r === 0 %>
+         <% cols.times do |letter| %>
+           <div class="col lineLetter"><%= letters[letter] %></div>
+         <% end %>
+      <% else %>
+        <% cols.times do |c| %>
+          <% if c > 0 %>
+            <div class="col seat"><%#= "#{r}" + letters[c] %></div>
+          <% else %>
+            <div class="col lineNumber"><%= r %></div>
+          <% end %>
+          <% if cols === 7 && c === 3 %>
+            <div class="col aisle">aisle</div>
+          <% end %>
+          <% if cols === 9 && (c === 3 || c === 5) %>
+            <div class="col aisle">aisle</div>
+          <% end %>
+          <% if cols === 11 && (c === 3 || c === 7) %>
+            <div class="col aisle">aisle</div>
+          <% end %>
         <% end %>
       <% end %>
     </div>
