--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,13 @@
 
   <%= @current_user.to_json %>
 
+
+</div>
+<%= image_tag("ac.png", :alt => "rss feed", class: "airplanecartoon") %>
+</div>
+
+
+
 </body>
 
 
