backbone getting messier

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
 
 
 </div>
-<%= image_tag("ac.png", :alt => "rss feed", class: "airplanecartoon") %>
+<%#= image_tag("ac.png", :alt => "rss feed", class: "airplanecartoon") %>
 </div>
 
 </body>
