--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -189,3 +189,10 @@ h5 {
 .selected {
   background-color: green;
 }
+
+#origin, #destination {
+  width: 200px;
+  display: inline-block;
+  background-color: rgba(0,0,0,0.2);
+  padding: 2px;
+}
