--- a/app/views/users/app.html.erb
+++ b/app/views/users/app.html.erb
@@ -18,7 +18,6 @@
 </script>
 
 <script type="html/template" id="search">
-  <%= form_tag "/search", method: "GET", :class => "searchForm" do %>
-  <%= text_field_tag :location %>
-  <% end %>
+  <input type="text" id="origin" class="browser-default" />
+  <input type="text" id="destination" class="browser-default" />
 </script>
