--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,10 @@
   <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <%= csrf_meta_tags %>
-</head>
 <body class="<%= params[:controller] %> <%= params[:action] %>">
-
   <nav>
-    <% unless @current_user.present?  %>
+    <% unless @current_user.present?%>
+    </head>
     <%= link_to "Login", login_path, :class => "loginNav" %>
     <%= link_to "Sign Up", new_user_path, :class => "signUpNav" %>
     <% else %>
@@ -39,6 +38,7 @@
     <%= flash[:error] %>
   </h5>
   <% end  %>
+  <nav>
 
 
 <div class="container">
