--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<h1><img src="http://res.cloudinary.com/esthertan/image/upload/v1481682772/aeroplane_hx9vad.png"></a></h1>
 <p id="notice"><%= notice %></p>
 
 <p>
