--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,16 +43,14 @@
 
 <div class="container">
 <div class="row">
-  <div class="col s2"></div>
   <div class="col s8"><%= yield %></div>
-  <div class="col s2"></div>
 </div>
 
 
 
-</div>
+<!-- </div>
 <%= image_tag("ac.png", :alt => "rss feed", class: "airplanecartoon") %>
-</div>
+</div> -->
 
 </body>
 
