--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,29 +2,25 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
-<<<<<<< HEAD
-=======
-  color: black;
-  background-image:
-  linear-gradient(
-      ghostwhite 15%
-    );
->>>>>>> ec36603fd04fda591efc3c92885791826f0da80d
 }
 
 nav {
   background-image:
-    (ghostwhite 15%,
-      #ff0000 100%
+  linear-gradient(
+      to right,
+      #26547C,
+      #26547C 5%,
+      #EF476F 5%,
+      #EF476F 10%,
+      #FFD166 10%,
+      #FFD166 15%,
+      ghostwhite 15%
     );
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;
   position: fixed;
   top: 0px;
-  background-image: url(http://res.cloudinary.com/esthertan/image/upload/v1481682772/aeroplane_hx9vad.png);
-  background-repeat: no-repeat;
-  background-position: left;
 }
 
 .container {
@@ -43,17 +39,8 @@ a {
 
 .loginNav, .addPlaneNav, .addFlightNav {
   float: left;
-  background-color: #ff0000;
-  color: white;
+  color: dodgerblue;
 }
-
-button {
-  background-color: #ff0000;
-  color: white;
-  border: 1px solid white;
-  border-radius: 5px;
-}
-
 .signUpNav, .logoutNav, .editNav {
   float: right;
   color: dodgerblue;
@@ -99,7 +86,7 @@ form {
   background-color: #f4a4a6;
   }
   button {
-    background-color: #ff0000;
+    background-color: #D44D5C;
     color: white;
     border: 1px solid white;
     border-radius: 5px;
@@ -129,11 +116,8 @@ form {
 
 
 h1 {
-  margin-top: 80px;
+  margin-top: 100px;
   text-align: center;
-  background-color: red;
-  color: white;
-  font-size: 25px;
 }
 .logo h1 {
   font-size: 100px;
@@ -239,10 +223,4 @@ html, body {
   100% {
     background-position: 0% 7%;
   }
-
-#origin, #destination {
-  width: 200px;
-  display: inline-block;
-  background-color: rgba(0,0,0,0.2);
-  padding: 2px;
 }
