--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -190,7 +190,7 @@ h5 {
   background-color: green;
 }
 
-#origin, #destination {
+#departure, #destination {
   width: 200px;
   display: inline-block;
   background-color: rgba(0,0,0,0.2);
