--- a/app/views/users/app.html.erb
+++ b/app/views/users/app.html.erb
@@ -1,6 +1,7 @@
 <div id="app">
+</div>
+<div id="results">
 
-<ul id="results"></ul>
 </div>
 
 <script>
@@ -18,6 +19,14 @@
 </script>
 
 <script type="html/template" id="search">
-  <input type="text" id="origin" class="browser-default" />
+  <input type="text" id="departure" class="browser-default" />
   <input type="text" id="destination" class="browser-default" />
+</script>
+
+<script type="html/template" id="searchItem">
+  <li>
+    <span>Departure: <%%= departure %></span>
+    <span>Destination: <%%= destination %></span>
+    <span>Flight Number: <%%= number %></span>
+  </li>
 </script>
