--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -1,8 +1,8 @@
 // Place all the styles related to the Bookings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-#origin {
-  width: 100px;
-  display: inline-block;
-  background-color: rgba(0,0,0,0.5);
-}
+// #origin {
+//   width: 100px;
+//   display: inline-block;
+//   background-color: rgba(0,0,0,0.5);
+// }
