--- a/app/assets/stylesheets/flights.scss
+++ b/app/assets/stylesheets/flights.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Flights controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#results {
+  background-color: rgba(255,255,255,0.6);
+
+  li {
+    list-style: none;
+  }
+}
