--- a/app/views/users/app.html.erb
+++ b/app/views/users/app.html.erb
@@ -25,7 +25,7 @@
 
 <script type="html/template" id="searchItem">
   <li class="row">
-    <span class="col s2 m2" id="<%%= number %>">Book</span>
+    <span class="col s2 m2" id="<%%= id %>">Book</span>
     <span class="col s3 m3">Departure: <%%= departure %></span>
     <span class="col s3 m3">Destination: <%%= destination %></span>
     <span class="col s4 m4">Flight Number: <%%= number %></span>
