--- a/app/views/users/app.html.erb
+++ b/app/views/users/app.html.erb
@@ -19,8 +19,8 @@
 </script>
 
 <script type="html/template" id="search">
-  <input type="text" id="departure" class="browser-default" />
-  <input type="text" id="destination" class="browser-default" />
+  <input type="text" id="departure" class="browser-default" placeholder="Departure" />
+  <input type="text" id="destination" class="browser-default" placeholder="Destination"/>
 </script>
 
 <script type="html/template" id="searchItem">
