--- a/app/views/users/app.html.erb
+++ b/app/views/users/app.html.erb
@@ -31,3 +31,102 @@
     <span class="col s4 m4">Flight Number: <%%= number %></span>
   </li>
 </script>
+
+<script type="html/template" id="showFlight">
+<p>
+  <strong>Number:</strong>
+  <%%= flight.number %>
+</p>
+
+<p>
+  <strong>Date:</strong>
+  <%%= flight.date %>
+</p>
+
+<p>
+  <strong>Destination:</strong>
+  <%%= flight.destination %>
+</p>
+
+<p>
+  <strong>Departure:</strong>
+  <%%= flight.departure %>
+</p>
+
+<p>
+  <strong>Duration:</strong>
+  <%%= flight.duration %>
+</p>
+
+<p>
+  <strong>Number:</strong>
+  <%%= flight.number %>
+</p>
+
+<p>
+  <strong>Date:</strong>
+  <%%= flight.date %>
+</p>
+
+<p>
+  <strong>Destination:</strong>
+  <%%= flight.destination %>
+</p>
+
+<p>
+  <strong>Departure:</strong>
+  <%%= flight.departure %>
+</p>
+
+<p>
+  <strong>Duration:</strong>
+  <%%= flight.duration %>
+</p>
+<%% if (flight.airplane) { %>
+  <p>
+    <strong>Airplane:</strong>
+    <%%= flight.airplane.name %>
+  </p>
+  <p>
+    <strong>cols:</strong>
+    <%%= flight.airplane.cols %>
+  </p>
+  <p>
+    <strong>rows:</strong>
+    <%%= flight.airplane.rows %>
+  </p>
+
+
+<div class="planeDisplay">
+  <%% _(parseInt(flight.airplane.rows) + 1).times(function(r) {  %>
+    <div class="row">
+      <%% var letters = ["","A","B","C","D","E","F","G","H","I","J","K","L"];  %>
+      <%% var cols = parseInt(flight.airplane.cols) + 1 %>
+      <%% if (r === 0) { %>
+         <%% _(col).times(function(letter) { %>
+           <div class="col lineLetter"><%%= letters[letter] %></div>
+         <%% }) %>
+      <%% } else { %>
+        <%% _(col).times(function(c) { %>
+          <%% if (c > 0) { %>
+            <div class="col seat"><%%= "#{r}" + letters[c] %></div>
+          <%% } else { %>
+            <div class="col lineNumber"><%%= r %></div>
+          <%% } %>
+          <%% if (cols === 7 && c === 3) { %>
+            <div class="col aisle">aisle</div>
+          <%% } %>
+          <%% if (cols === 9 && (c === 3 || c === 5)) { %>
+            <div class="col aisle">aisle</div>
+          <%% } %>
+          <%% if (cols === 11 && (c === 3 || c === 7)) { %>
+            <div class="col aisle">aisle</div>
+          <%% } %>
+        <%% }); %>
+      <%% } %>
+    </div>
+  <%% }) %>
+</div>
+
+<%% } %>
+</script>
