few more changes

--- a/app/assets/stylesheets/airplanes.scss
+++ b/app/assets/stylesheets/airplanes.scss
@@ -1,9 +1,9 @@
 // Place all the styles related to the Airplanes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.seat {
-  width: 10px;
-  height: 10px;
-  border-radius: 3px;
-  border: 1.5px outset dodgerblue;
-}
+// .seat {
+//   width: 10px;
+//   height: 10px;
+//   border-radius: 3px;
+//   border: 1.5px outset dodgerblue;
+// }
