--- a/app/views/users/app.html.erb
+++ b/app/views/users/app.html.erb
@@ -1,8 +1,35 @@
 <div id="app">
 </div>
-<div id="results">
+
+<div class="row">
+
+  <div class="col s12 m3">
+    <div id="bookingDetails">
+
+    </div>
+  </div>
+
+  <div class="col s12 m6">
+    <div id="results">
+
+    </div>
+  </div>
+
+  <div class="col s12 m3">
+    <div id="resultDetails">
+
+    </div>
+  </div>
 
 </div>
+
+
+
+
+
+
+
+
 
 <script>
   var app = app || {};
