--- a/app/assets/stylesheets/flights.scss
+++ b/app/assets/stylesheets/flights.scss
@@ -2,10 +2,16 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #results {
-  background-color: rgba(255,255,255,0.6);
+  background-color: rgba(255,255,255,0.5);
+  display: inline-block;
+  padding: 0px 20px 5px 10px;
+  max-height: 70vh;
+  overflow:auto;
+  border: 3px solid ghostwhite;
 
+  .row {
+  }
   li {
     list-style: none;
   }
-
 }
