--- a/app/views/airplanes/_form.html.erb
+++ b/app/views/airplanes/_form.html.erb
@@ -26,5 +26,5 @@
   <div class="actions">
     <%= f.submit %>
   </div>
-  <%= link_to 'Back', airplanes_path %>
+  <%= link_to 'Back', airplanes_path, :class => "backShow" %>
 <% end %>
