--- a/app/assets/stylesheets/flights.scss
+++ b/app/assets/stylesheets/flights.scss
@@ -4,15 +4,21 @@
 #results {
   background-color: rgba(255,255,255,0.5);
   display: inline-block;
-  padding: 0px 20px 5px 10px;
+  padding: 0px 20px 0px 10px;
   max-height: 70vh;
   overflow:auto;
-  border: 3px solid ghostwhite;
   min-width: 600px;
 
   .row {
+  background-color: rgba(255,255,255,0.2);
   }
   li {
     list-style: none;
   }
+}
+
+
+
+.container.row {
+  background-color: rgba(255,255,255,0.5);
 }
