added seach nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
     <ul class="hide-on-med-and-down">
     <%= link_to "Add Airplane", new_airplane_path, :class => "addPlaneNav" %>
     <%= link_to "Add Flight", new_flight_path(), :class => "addFlightNav" %>
+    <%= link_to "Search", app_path, :class => "searchNav" %>
     <%= link_to "Logout", login_path, :method => :delete, :class => "logoutNav" %>
     <%= link_to "Edit Profile", edit_user_path, :class => "editNav" %>
     </ul>
