--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,7 +56,7 @@ a {
   margin: 0px 20px;
 }
 
-.loginNav, .addPlaneNav, .addFlightNav {
+.loginNav, .addPlaneNav, .addFlightNav, .searchNav {
   float: left;
   color: dodgerblue;
 }
