added flight details

--- a/app/views/users/app.html.erb
+++ b/app/views/users/app.html.erb
@@ -59,9 +59,9 @@
   </li>
 </script>
 
-<script type="html/template" id="showFlight">
+<script type="html/template" id="showFlightDetails">
 <p>
-  <strong>Number:</strong>
+  <strong>Flight Number:</strong>
   <%%= flight.number %>
 </p>
 
