--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,6 +36,7 @@ nav {
 	box-shadow: none;
   position: fixed;
   top: 0px;
+  z-index: 2;
 }
 
 .top-row {
@@ -44,6 +45,8 @@ nav {
 .container {
   margin: 125px auto;
   width: 100vw;
+  position: relative;
+  z-index: 1;
 }
 
 a {
@@ -237,6 +240,39 @@ h5 {
   color: white;
 }
 
+#Star-1 {
+  -webkit-animation: stars 30s ease-in-out infinite;
+  animation: stars 30s ease-in-out infinite;
+}
+
+svg {
+  position: absolute;
+
+}
+
+@-webkit-keyframes stars {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes stars {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 html, body {
   width: 100%;
   height: 100%;
@@ -282,6 +318,53 @@ html, body {
     background-position: 0% 7%;
   }
 }
+
+
+// html, body {
+//   width: 100%;
+//   height: 100%;
+//   justify-content: center;
+//   align-items: center;
+//   background: linear-gradient(123deg, #eef9f6, #beebfc, #1c6cc1, #0638a6, #33485d, #112436);
+//   background-size: 1200% 1200%;
+//   -webkit-animation: sky 30s ease-in-out infinite;
+//   -moz-animation: sky 30s ease-in-out infinite;
+//   animation: sky 30s ease-in-out infinite;
+// }
+//
+// @-webkit-keyframes sky {
+//   0% {
+//     background-position: 0% 7%;
+//   }
+//   50% {
+//     background-position: 100% 94%;
+//   }
+//   100% {
+//     background-position: 0% 7%;
+//   }
+// }
+// @-moz-keyframes sky {
+//   0% {
+//     background-position: 0% 7%;
+//   }
+//   50% {
+//     background-position: 100% 94%;
+//   }
+//   100% {
+//     background-position: 0% 7%;
+//   }
+// }
+// @keyframes sky {
+//   0% {
+//     background-position: 0% 7%;
+//   }
+//   50% {
+//     background-position: 100% 94%;
+//   }
+//   100% {
+//     background-position: 0% 7%;
+//   }
+// }
 
 .backShow {
   margin-left: 0px;
