--- a/app/assets/stylesheets/flights.scss
+++ b/app/assets/stylesheets/flights.scss
@@ -4,13 +4,15 @@
 #results {
   background-color: rgba(255,255,255,0.5);
   display: inline-block;
-  padding: 0px 20px 0px 10px;
+  padding: 0px 20px 0px 20px;
   max-height: 70vh;
   overflow:auto;
   min-width: 600px;
+  border-radius: 10px;
 
   .row {
   background-color: rgba(255,255,255,0.2);
+  border-radius: 10px;
   }
   li {
     list-style: none;
