as done a its going to get

--- a/app/views/users/app.html.erb
+++ b/app/views/users/app.html.erb
@@ -87,3 +87,28 @@
 
 
 </script>
+<script type="html/template" id="showBookingDetails">
+
+<p>
+  <strong>Name:</strong>
+  <%%= user.name %>
+</p>
+
+<p>
+  <strong>Destination:</strong>
+  <%%= flight.destination %>
+</p>
+
+<p>
+  <strong>Departure:</strong>
+  <%%= flight.departure %>
+</p>
+
+<p>
+  <strong>email:</strong>
+  <%%= user.email %>
+</p>
+
+<button id="confirmBooking">Confirm Booking</button>
+
+</script>
