css updates cant be fucked anymore haha

--- a/app/views/users/app.html.erb
+++ b/app/views/users/app.html.erb
@@ -1,5 +1,8 @@
+<%= image_tag("planenew2.png", :alt => "plane", :class => "planeFly") %>
+
 <div id="app">
 </div>
+
 
 <div class="row">
 
@@ -46,8 +49,9 @@
 </script>
 
 <script type="html/template" id="search">
-  <input type="text" id="departure" class="browser-default" placeholder="Departure" />
-  <input type="text" id="destination" class="browser-default" placeholder="Destination"/>
+<h2>Where In The World Do You Want To Go?</h2>
+  <input type="text" id="departure" class="browser-default" placeholder="Im Here!" />
+  <input type="text" id="destination" class="browser-default" placeholder="And I Wanna Go Here!"/>
 </script>
 
 <script type="html/template" id="searchItem">
