--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,7 +56,7 @@ a {
 
 .hide-on-med-and-down a {
   font-size: 20px;
-  margin: 0px 20px;
+  margin: 0px 10px;
 }
 
 .loginNav, .addPlaneNav, .addFlightNav, .searchNav {
@@ -100,8 +100,8 @@ form {
 
   input {
     color: #EF476F;
-    background-color: ghostwhite;
-    border: 2px solid #EF476F;
+    background-color: rgba(255, 255, 255, .5);
+    border: 2px solid ghostwhite;
     border-radius: 5px;
     margin: 0px 0px 10px 0px;
   }
@@ -131,7 +131,6 @@ form {
     outline: none;
     border-bottom: 1px solid ghostwhite !important;
     box-shadow: 0 1px 0 0 ghostwhite !important;
-    border-radius: 10px;
   }
 }
 
@@ -159,16 +158,12 @@ text-shadow:
 .logo h1 {
   font-size: 100px;
   color: white;
-  // text-shadow: 2px 1px 10px rgba(0, 0, 0, 0.5);
 }
 
 h2 {
-  font-family: 'Lobster', cursive;
+  margin-top: 100px;
   text-align: center;
-  margin: 0 auto;
-  margin-top: 10px;
-  color: white;
-  // text-shadow: 2px 1px 10px rgba(0, 0, 0, 0.5);
+  color: #EF476F;
 }
 
 h3 {
@@ -232,8 +227,8 @@ h5 {
 #departure, #destination {
   width: 200px;
   display: inline-block;
-  background-color: rgba(0,0,0,0.2);
   padding: 2px;
+  margin: 0 5px;
 }
 
 #search {
@@ -319,63 +314,14 @@ html, body {
   }
 }
 
-
-// html, body {
-//   width: 100%;
-//   height: 100%;
-//   justify-content: center;
-//   align-items: center;
-//   background: linear-gradient(123deg, #eef9f6, #beebfc, #1c6cc1, #0638a6, #33485d, #112436);
-//   background-size: 1200% 1200%;
-//   -webkit-animation: sky 30s ease-in-out infinite;
-//   -moz-animation: sky 30s ease-in-out infinite;
-//   animation: sky 30s ease-in-out infinite;
-// }
-//
-// @-webkit-keyframes sky {
-//   0% {
-//     background-position: 0% 7%;
-//   }
-//   50% {
-//     background-position: 100% 94%;
-//   }
-//   100% {
-//     background-position: 0% 7%;
-//   }
-// }
-// @-moz-keyframes sky {
-//   0% {
-//     background-position: 0% 7%;
-//   }
-//   50% {
-//     background-position: 100% 94%;
-//   }
-//   100% {
-//     background-position: 0% 7%;
-//   }
-// }
-// @keyframes sky {
-//   0% {
-//     background-position: 0% 7%;
-//   }
-//   50% {
-//     background-position: 100% 94%;
-//   }
-//   100% {
-//     background-position: 0% 7%;
-//   }
-// }
-
 .backShow {
   margin-left: 0px;
 }
 
 #app input {
-  background-color: rgba(255, 255, 255, .3);
   outline: none;
   border-bottom: 1px solid ghostwhite !important;
   box-shadow: 0 1px 0 0 ghostwhite !important;
-  border-radius: 10px;
   color: #EF476F;
   height: 30px;
 }
@@ -384,11 +330,16 @@ html, body {
   text-align: center;
   input:focus {
     outline: none;
-    background-color: ghostwhite;
+    background-color: rgba(255, 255, 255, .5);
   }
 }
 
 span.m2 {
   color: #EF476F;
   cursor: pointer;
+}
+
+.planeFly {
+  transform: translate(-50px, 0px);
+  z-index: 2;
 }
