--- a/app/views/users/app.html.erb
+++ b/app/views/users/app.html.erb
@@ -1,4 +1,5 @@
 <%= image_tag("planenew2.png", :alt => "plane", :class => "planeFly") %>
+<%= image_tag("ac.png", :alt => "plane", :class => "planeFloat") %>
 
 <div id="app">
 </div>
